--- a/README.me
+++ b/README.me
@@ -2,3 +2,7 @@ Project Work for the Artificial Intelligence Course ID1214
 
 This project was done in collaboration with Lukas Pöldma.
 
+The predictions are made using the previous 9 days of the 'Closing Value' of the Cryptocurrency to predict the next day. The dataset is obtained from the YAHOO Finance API. 
+The LSTM model was used for this Neural Network as it is ideal for working with time-series data. 
+Information on how to run the code is in the user_manual.txt file.
+
